add_subdirectory(API)
add_subdirectory(C++11)
add_subdirectory(Configuration)
add_subdirectory(DataStructures)
add_subdirectory(Utility)
add_subdirectory(Peripherals)
# add_subdirectory(Autowiring)
# add_subdirectory(Calibration)
# add_subdirectory(CalibrationUtilities)
# add_subdirectory(Camera)
# add_subdirectory(Hardware)
# add_subdirectory(ImageProcessing)
# add_subdirectory(Instrumentation)
# if(BUILD_FIRMWARE_UPDATER)
#   add_subdirectory(LeapFwPatch)
# endif()
# add_subdirectory(LeapSvc)
# add_subdirectory(LeapSvcLib)
# add_subdirectory(ML)
# add_subdirectory(NetworkServices)
# add_subdirectory(Networking)
# IF(USE_QT)
#   add_subdirectory(ControlPanelUI)
#   add_subdirectory(LeapControlPanel)
#   add_subdirectory(ScreenLocator)
# ENDIF(USE_QT)
# if(USE_EXPERIMENTAL_MODELS)
#   add_subdirectory(GraphMethods)
# endif()
# add_subdirectory(Tracking)
# add_subdirectory(FilterMethods)
# add_subdirectory(Visualization)
# add_subdirectory(VisSandBox)
# add_subdirectory(System)
# add_subdirectory(Websockets)
# add_subdirectory(Diagnostic)
# add_subdirectory(CrashReport)
# add_subdirectory(Localization)
# if(BUILD_LEGACY_PLUGINS)
#   add_subdirectory(Plugins)
# endif()


# set(FILES_TO_TRANSLATE ${FILES_TO_TRANSLATE} PARENT_SCOPE)

# CONFIGURE_FILE(ocuConfig.h.in ${PROJECT_BINARY_DIR}/ocuConfig.h @ONLY IMMEDIATE)
# CONFIGURE_FILE(Version.h.in ${PROJECT_BINARY_DIR}/Version.h @ONLY IMMEDIATE)
